--- a/server/package.json
+++ b/server/package.json
@@ -29,5 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
