--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "burger-king",
   "version": "1.0.0",
   "description": "The burger king website",
+  "proxy": "https://burger-ing.netlify.app/",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
